# M

./: .gitignore  README.md
lab01/: CMakeLists.txt  main.cpp
lab01/cauchy/: cauchy.cpp  cauchy.hpp
lab01/doc/: preamble.tex  title.tex
lab01/polynomial/: polynomial.cpp  polynomial.hpp
lab01/range/: range.cpp
lab02/: CMakeLists.txt  _main.cpp  lab02.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  parameters.hpp  resource.qrc  solve.cpp  solve.hpp
lab02/doc/: preamble.tex  report.tex  title.tex
lab02/qcustomplot/: qcustomplot.cpp
lab03/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  solve.cpp
lab03/doc/: report.tex
lab04/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  solve.cpp  solve.hpp
lab04/doc/: preamble.tex  report.tex  title.tex
lab05/: mainwindow.hpp  mainwindow.ui  model.cpp
sem06/lab01/: CMakeLists.txt
sem06/lab01/cauchy/: cauchy.hpp
sem06/lab01/doc/: report.tex
sem06/lab01/polynomial/: polynomial.hpp
sem06/lab01/range/: range.hpp
sem06/lab02/: CMakeLists.txt  mainwindow.h  mainwindow.ui  solve.cpp
sem06/lab03/: mainwindow.cpp  mainwindow.hpp  solve.hpp
sem06/lab03/doc/: title.tex
sem06/lab04/: CMakeLists.txt  solve.cpp  solve.hpp
sem06/lab04/doc/: report.tex
sem06/lab05/: CMakeLists.txt  mainwindow.cpp  model.hpp  plot.cpp  plot.hpp
sem06/lab05/doc/: report.tex  title.tex
sem06/qcustomplot/: qcustomplot.h
sem07/lab01/: CMakeLists.txt  digits.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  numbers_table_widget.hpp  random.hpp  random_number_table.hpp
sem07/lab01/doc/: preamble.tex  report.tex  title.tex
sem07/lab02/: preamble.tex  report.tex  title.tex
sem07/lab03/: CMakeLists.txt  gauss.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  markov.hpp  random.hpp
sem07/lab03/doc/: report.tex  title.tex
sem07/lab04/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  simulate.cpp  simulate.hpp
sem07/lab04/doc/: preamble.tex  report.tex  title.tex
sem07/lab05/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  random.hpp  simulate.cpp  simulate.hpp
sem07/lab05/doc/: report.tex  title.tex
sem07/lab06/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  random.hpp  simulate.cpp  simulate.hpp
sem07/lab06/doc/: report.tex  title.tex
sem07/lab07/: Project.gsproj
sem07/lab07/SimModels/Модель 1/: Diagram.gsdiagram  ModelText.gps  ModelText.gps.mtdt  StdJournal.sim  StdReport.gpr
sem07/lab07/TebsLibraries/: 06da06c8-e334-4d26-9f03-6d6e62cc1c84.1.0.0.0.tlib
sem07/lab07/doc/: preamble.tex  report.tex  title.tex
sem07/lab07/doc/inc/src/: main.gpss
sem07/lab08/: Project.gsproj
sem07/lab08/SimModels/Проект 2/: Diagram.gsdiagram  ModelText.gps  StdJournal.sim  StdJournal.sim.mtdt  StdReport.gpr
sem07/lab08/TebsLibraries/: 24c1d70e-5fc3-44b3-be8d-de4ee6f8ecb6.1.0.0.0.tlib
sem07/lab08/doc/: preamble.tex  report.tex  title.tex
sem07/lab08/doc/inc/img/: conceptual-model.graphml
sem07/lab08/doc/inc/src/: main.gpss
